# personal-assistant

./: .gitignore  CLAUDE.md  README.md  assistant.py  email_reader.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-20-daily-briefing.md  2026-04-20-sms-send.md
docs/superpowers/specs/: 2026-04-20-daily-briefing-design.md  2026-04-20-sms-send-design.md
src/assistant/: exceptions.py
src/assistant/cli/: formatters.py  main.py
src/assistant/features/: calendar_prep.py  daily_briefing.py  email_actions.py  linkedin_feed.py  sms_send.py
src/assistant/integrations/: base.py  calendar.py  docs.py  gmail.py  linkedin.py  sms.py
src/assistant/llm/: claude.py
tests/features/: test_daily_briefing.py  test_linkedin_feed.py  test_sms_send.py
tests/integrations/: test_calendar.py  test_docs.py  test_gmail.py  test_linkedin.py  test_sms.py
