[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "python-dotenv",
    "boto3",
]

[project.scripts]
assistant = "assistant.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
